--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
