--- a/Donjon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Donjon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 LastLevel=/Game/FirstPersonBP/Maps/Collecting_Level
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
@@ -828,15 +828,15 @@ PaletteThumbnailScale=0.300000
 
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-CameraComponent=CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Color Grading.Color Grading|Misc,CameraComponent.Lens.Lens|Chromatic Aberration,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|Dirt Mask,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|ExposureAdvanced,CameraComponent.Lens.Lens|Exposure,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Global Illumination,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,
+CameraComponent=CameraComponent.Color Grading.Color Grading
 FirstPersonCharacter_C=
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/Collecting_Level
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Maps/Collecting_Level
 MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
 MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
 MRUItem4=/Game/FirstPersonBP/Blueprints/Collecte
@@ -1174,6 +1174,15 @@ FirstPersonCharacter_C.Variable=True
 FirstPersonCharacter_C.Sockets=True
 FirstPersonCharacter_C.ComponentReplication=True
 FirstPersonCharacter_C.Events=True
+REINST_FirstPersonCharacter_C_36.None=True
+REINST_FirstPersonCharacter_C_36.Tick=True
+REINST_FirstPersonCharacter_C_36.Character=True
+REINST_FirstPersonCharacter_C_36.Camera=True
+REINST_FirstPersonCharacter_C_36.Pawn=True
+REINST_FirstPersonCharacter_C_36.Rendering=True
+REINST_FirstPersonCharacter_C_36.Replication=True
+REINST_FirstPersonCharacter_C_36.Input=True
+REINST_FirstPersonCharacter_C_36.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
