--- a/Donjon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Donjon/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,8 +101,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=1
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/Collectibles_Grappin
-MRUItem1=/Game/FirstPersonBP/Maps/PlatformLabyrinthe
+MRUItem0=/Game/FirstPersonBP/Maps/PlatformLabyrinthe
+MRUItem1=/Game/FirstPersonBP/Maps/Collectibles_Grappin
 MRUItem2=/Game/FirstPersonBP/Maps/Collecting_Level
 MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/Platform
@@ -130,10 +130,10 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/Collectibles_Grappin
+LastLevel=/Game/FirstPersonBP/Maps/PlatformLabyrinthe
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=152.800
@@ -851,14 +851,15 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 PostProcessVolume=PostProcessVolume.Lens.Lens
+PlatformLabyrinthe_C=FirstPersonCharacter_C.Rendering.TextureStreaming,FirstPersonCharacter_C.Rendering.LOD,
 
 [MessageLog]
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Maps/Collectibles_Grappin
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem1=/Game/FirstPersonBP/Maps/PlatformLabyrinthe
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem2=/Game/FirstPersonBP/Maps/Collectibles_Grappin
 MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonProjectile
 MRUItem4=/Game/Material/EYellow
 MRUItem5=/Game/Material/EPurple
@@ -2344,6 +2345,15 @@ SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
 GeomModifier_Extrude.Settings=True
+REINST_FirstPersonCharacter_C_35.None=True
+REINST_FirstPersonCharacter_C_35.Tick=True
+REINST_FirstPersonCharacter_C_35.Character=True
+REINST_FirstPersonCharacter_C_35.Camera=True
+REINST_FirstPersonCharacter_C_35.Pawn=True
+REINST_FirstPersonCharacter_C_35.Rendering=True
+REINST_FirstPersonCharacter_C_35.Replication=True
+REINST_FirstPersonCharacter_C_35.Input=True
+REINST_FirstPersonCharacter_C_35.Actor=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2352,7 +2362,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.FilmWhitePoint\" \"Object.PostProcess.PostProcessSettings.FilmShadowTint\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerRed\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerGreen\" \"Object.PostProcess.PostProcessSettings.FilmChannelMixerBlue\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.LightmassSettings\" "
+Object=
 FirstPersonCharacter_C=
 Character=
 Pawn=
