--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,9 @@ Donjon/Saved/Logs/Donjon.log
 Donjon/Saved/Logs/Donjon.log
 Donjon/Saved/Logs/Donjon.log
 Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+Donjon/Saved/Logs/Donjon.log
+*.log
